--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Galereya</a></li>
             <li><a href="#">Video</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="#" class="drop">Settings</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
